Ordenando de forma ASC los mensajes de una clase
